--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -730,7 +730,7 @@ Disable slime for now
   (add-hook 'python-mode-hook 'thomasf-python-mode-hook)
 #+end_src
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (when (load "flymake" t)
     (defun flymake-pylint-init (&optional trigger-type)
       (let* ((temp-file (flymake-init-create-temp-buffer-copy
@@ -885,11 +885,13 @@ Does not work very well..
 Inspirations:
 - http://orgmode
 - http://doc.norang.ca/org-mode.html
-** Load stuff
-#+begin_src emacs-lisp :tangle thomasf-org.el
+
+** SET UP ORG MODE LOADING!!!
+#+begin_src emacs-lisp
   (eval-after-load "org-agenda"
     '(progn
-       (require 'org-checklist)))
+       (require 'thomasf-org-agenda)))
+
 #+end_src
 ** Set up basic paths for org and org-agenda
 #+begin_src emacs-lisp :tangle thomasf-org.el
@@ -932,199 +934,6 @@ Inspirations:
         org-icalendar-alarm-time 240)
 #+end_src
 
-**** Agenda commands
-#+begin_src emacs-lisp :tangle thomasf-org.el
-  (eval-after-load "org-agenda"
-    '(progn
-       ;; Custom agenda command definitions
-       (setq org-agenda-custom-commands
-             (quote (("N" "Notes" tags "note"
-                      ((org-agenda-overriding-header "Notes")
-                       (org-tags-match-list-sublevels t)))
-                     ("h" "Habits" tags-todo "STYLE=\"habit\""
-                      ((org-agenda-overriding-header "Habits")
-                       (org-agenda-sorting-strategy
-                        '(todo-state-down effort-up category-keep))))
-                     (" " "Agenda"
-                      ((agenda "" nil)
-                       (tags "refile"
-                             ((org-agenda-overriding-header "Tasks to Refile")
-                              (org-tags-match-list-sublevels nil)))
-                       (tags-todo "-cancelled/!"
-                                  ((org-agenda-overriding-header "Stuck Projects")
-                                   (org-tags-match-list-sublevels 'indented)
-                                   (org-agenda-skip-function 'bh/skip-non-stuck-projects)))
-                       (tags-todo "-waiting-cancelled/!next"
-                                  ((org-agenda-overriding-header "Next Tasks")
-                                   (org-agenda-skip-function 'bh/skip-projects-and-habits-and-single-tasks)
-                                   (org-agenda-todo-ignore-scheduled t)
-                                   (org-agenda-todo-ignore-deadlines t)
-                                   (org-tags-match-list-sublevels t)
-                                   (org-agenda-sorting-strategy
-                                    '(todo-state-down effort-up category-keep))))
-                       (tags-todo "-refile-cancelled/!-hold-waiting"
-                                  ((org-agenda-overriding-header "Tasks")
-                                   (org-agenda-skip-function 'bh/skip-project-tasks-maybe)
-                                   (org-agenda-todo-ignore-scheduled t)
-                                   (org-agenda-todo-ignore-deadlines t)
-                                   (org-agenda-sorting-strategy
-                                    '(category-keep))))
-                       (tags-todo "-cancelled/!"
-                                  ((org-agenda-overriding-header "Projects")
-                                   (org-agenda-skip-function 'bh/skip-non-projects)
-                                   (org-agenda-todo-ignore-scheduled 'future)
-                                   (org-agenda-todo-ignore-deadlines 'future)
-                                   (org-agenda-sorting-strategy
-                                    '(category-keep))))
-                       (tags-todo "-cancelled/!waiting|hold"
-                                  ((org-agenda-overriding-header "Waiting and Postponed Tasks")
-                                   (org-agenda-skip-function 'bh/skip-projects-and-habits)
-                                   (org-agenda-todo-ignore-scheduled t)
-                                   (org-agenda-todo-ignore-deadlines t)))
-                       (tags "-refile/"
-                             ((org-agenda-overriding-header "Tasks to Archive")
-                              (org-agenda-skip-function 'bh/skip-non-archivable-tasks))))
-                      nil)
-                     ("r" "Tasks to Refile" tags "REFILE"
-                      ((org-agenda-overriding-header "Tasks to Refile")
-                       (org-tags-match-list-sublevels nil)))
-                     ("#" "Stuck Projects" tags-todo "-cancelled/!"
-                      ((org-agenda-overriding-header "Stuck Projects")
-                       (org-agenda-skip-function 'bh/skip-non-stuck-projects)))
-                     ("n" "Next Tasks" tags-todo "-waiting-cancelled/!next"
-                      ((org-agenda-overriding-header "Next Tasks")
-                       (org-agenda-skip-function 'bh/skip-projects-and-habits-and-single-tasks)
-                       (org-agenda-todo-ignore-scheduled t)
-                       (org-agenda-todo-ignore-deadlines t)
-                       (org-tags-match-list-sublevels t)
-                       (org-agenda-sorting-strategy
-                        '(todo-state-down effort-up category-keep))))
-                     ("R" "Tasks" tags-todo "-refile-cancelled/!-hold-waiting"
-                      ((org-agenda-overriding-header "Tasks")
-                       (org-agenda-skip-function 'bh/skip-project-tasks-maybe)
-                       (org-agenda-sorting-strategy
-                        '(category-keep))))
-                     ("p" "Projects" tags-todo "-cancelled/!"
-                      ((org-agenda-overriding-header "Projects")
-                       (org-agenda-skip-function 'bh/skip-non-projects)
-                       (org-agenda-todo-ignore-scheduled 'future)
-                       (org-agenda-todo-ignore-deadlines 'future)
-                       (org-agenda-sorting-strategy
-                        '(category-keep))))
-                     ("w" "Waiting Tasks" tags-todo "-cancelled/!waiting|hold"
-                      ((org-agenda-overriding-header "Waiting and Postponed tasks"))
-                      (org-agenda-skip-function 'bh/skip-projects-and-habits)
-                      (org-agenda-todo-ignore-scheduled 'future)
-                      (org-agenda-todo-ignore-deadlines 'future))
-                     ("A" "Tasks to Archive" tags "-refile/"
-                      ((org-agenda-overriding-header "Tasks to Archive")
-                       (org-agenda-skip-function 'bh/skip-non-archivable-tasks))))))))
-#+end_src
-
-**** Agenda skip functions
-#+begin_src emacs-lisp :tangle thomasf-org.el
-  (eval-after-load "org-agenda"
-    '(progn
-       (defun bh/skip-non-stuck-projects ()
-         "Skip trees that are not stuck projects"
-         (save-restriction
-           (widen)
-           (let ((next-headline (save-excursion (or (outline-next-heading) (point-max)))))
-             (if (bh/is-project-p)
-                 (let* ((subtree-end (save-excursion (org-end-of-subtree t)))
-                        (has-next (save-excursion
-                                    (forward-line 1)
-                                    (and (< (point) subtree-end)
-                                         (re-search-forward "^\\*+ \\(NEXT\\) " subtree-end t)))))
-                   (if has-next
-                       next-headline
-                     nil)) ; a stuck project, has subtasks but no next task
-               next-headline))))
-
-       (defun bh/skip-non-projects ()
-         "Skip trees that are not projects"
-         (bh/list-sublevels-for-projects-indented)
-         (if (save-excursion (bh/skip-non-stuck-projects))
-             (save-restriction
-               (widen)
-               (let ((subtree-end (save-excursion (org-end-of-subtree t))))
-                 (if (bh/is-project-p)
-                     nil
-                   subtree-end)))
-           (org-end-of-subtree t)))
-
-       (defun bh/skip-project-trees-and-habits ()
-         "Skip trees that are projects"
-         (save-restriction
-           (widen)
-           (let ((subtree-end (save-excursion (org-end-of-subtree t))))
-             (cond
-              ((bh/is-project-p)
-               subtree-end)
-              ((org-is-habit-p)
-               subtree-end)
-              (t
-               nil)))))
-
-       (defun bh/skip-projects-and-habits-and-single-tasks ()
-         "Skip trees that are projects, tasks that are habits, single non-project tasks"
-         (save-restriction
-           (widen)
-           (let ((next-headline (save-excursion (or (outline-next-heading) (point-max)))))
-             (cond
-              ((org-is-habit-p)
-               next-headline)
-              ((bh/is-project-p)
-               next-headline)
-              ((and (bh/is-task-p) (not (bh/is-project-subtree-p)))
-               next-headline)
-              (t
-               nil)))))
-
-       (defun bh/skip-project-tasks-maybe ()
-         "Show tasks related to the current restriction.
-  When restricted to a project, skip project and sub project tasks, habits, NEXT tasks, and loose tasks.
-  When not restricted, skip project and sub-project tasks, habits, and project related tasks."
-         (save-restriction
-           (widen)
-           (let* ((subtree-end (save-excursion (org-end-of-subtree t)))
-                  (next-headline (save-excursion (or (outline-next-heading) (point-max))))
-                  (limit-to-project (marker-buffer org-agenda-restrict-begin)))
-             (cond
-              ((bh/is-project-p)
-               next-headline)
-              ((org-is-habit-p)
-               subtree-end)
-              ((and (not limit-to-project)
-                    (bh/is-project-subtree-p))
-               subtree-end)
-              ((and limit-to-project
-                    (bh/is-project-subtree-p)
-                    (member (org-get-todo-state) (list "NEXT")))
-               subtree-end)
-              (t
-               nil)))))
-
-       (defun bh/skip-projects-and-habits ()
-         "Skip trees that are projects and tasks that are habits"
-         (save-restriction
-           (widen)
-           (let ((subtree-end (save-excursion (org-end-of-subtree t))))
-             (cond
-              ((bh/is-project-p)
-               subtree-end)
-              ((org-is-habit-p)
-               subtree-end)
-              (t
-               nil)))))
-
-       (defun bh/skip-non-subprojects ()
-         "Skip trees that are not projects"
-         (let ((next-headline (save-excursion (outline-next-heading))))
-           (if (bh/is-subproject-p)
-               nil
-             next-headline)))))
-#+end_src
 *** Refile
 #+begin_src emacs-lisp :tangle thomasf-org.el
   (setq org-refile-targets (quote ((org-agenda-files :level . 2))))
@@ -1249,12 +1058,6 @@ Inspirations:
   (setq org-confirm-babel-evaluate nil
         org-export-babel-evaluate nil)
 #+end_src
-*** TODO Use inline formatting with org-babel
-To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
-#+begin_src emacs-lisp :tangle no
-  (setq org-src-fontify-natively t)
-  (setq org-src-tab-acts-natively t)
-#+end_src
 ** Support functions
 #+begin_src emacs-lisp :tangle thomasf-org.el
   (defun open-index-notes ()
@@ -1320,74 +1123,8 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
 
 
   ;; support functions
-  (defun bh/is-project-p ()
-    "Any task with a todo keyword subtask"
-    (save-restriction
-      (widen)
-      (let ((has-subtask)
-            (subtree-end (save-excursion (org-end-of-subtree t)))
-            (is-a-task (member (nth 2 (org-heading-components)) org-todo-keywords-1)))
-        (save-excursion
-          (forward-line 1)
-          (while (and (not has-subtask)
-                      (< (point) subtree-end)
-                      (re-search-forward "^\*+ " subtree-end t))
-            (when (member (org-get-todo-state) org-todo-keywords-1)
-              (setq has-subtask t))))
-        (and is-a-task has-subtask))))
 
-  (defun bh/is-project-subtree-p ()
-    "Any task with a todo keyword that is in a project subtree.
-    Callers of this function already widen the buffer view."
-    (let ((task (save-excursion (org-back-to-heading 'invisible-ok)
-                                (point))))
-      (save-excursion
-        (bh/find-project-task)
-        (if (equal (point) task)
-            nil
-          t))))
 
-  (defun bh/is-task-p ()
-    "Any task with a todo keyword and no subtask"
-    (save-restriction
-      (widen)
-      (let ((has-subtask)
-            (subtree-end (save-excursion (org-end-of-subtree t)))
-            (is-a-task (member (nth 2 (org-heading-components)) org-todo-keywords-1)))
-        (save-excursion
-          (forward-line 1)
-          (while (and (not has-subtask)
-                      (< (point) subtree-end)
-                      (re-search-forward "^\*+ " subtree-end t))
-            (when (member (org-get-todo-state) org-todo-keywords-1)
-              (setq has-subtask t))))
-        (and is-a-task (not has-subtask)))))
-
-  (defun bh/is-subproject-p ()
-    "Any task which is a subtask of another project"
-    (let ((is-subproject)
-          (is-a-task (member (nth 2 (org-heading-components)) org-todo-keywords-1)))
-      (save-excursion
-        (while (and (not is-subproject) (org-up-heading-safe))
-          (when (member (nth 2 (org-heading-components)) org-todo-keywords-1)
-            (setq is-subproject t))))
-      (and is-a-task is-subproject)))
-
-  (defun bh/list-sublevels-for-projects-indented ()
-    "Set org-tags-match-list-sublevels so when restricted to a subtree we list all subtasks.
-      This is normally used by skipping functions where this variable is already local to the agenda."
-    (if (marker-buffer org-agenda-restrict-begin)
-        (setq org-tags-match-list-sublevels 'indented)
-      (setq org-tags-match-list-sublevels nil))
-    nil)
-
-  (defun bh/list-sublevels-for-projects ()
-    "Set org-tags-match-list-sublevels so when restricted to a subtree we list all subtasks.
-      This is normally used by skipping functions where this variable is already local to the agenda."
-    (if (marker-buffer org-agenda-restrict-begin)
-        (setq org-tags-match-list-sublevels t)
-      (setq org-tags-match-list-sublevels nil))
-    nil)
 #+end_src
 
 ** TODO clocking
